Example of placeholders treatment in table data